--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "deploy": "git push origin master && git push heroku master"
+    "deploy": "git push origin master && git push heroku master",
+    "test": "./node_modules/.bin/jasmine-node spec"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -19,5 +20,8 @@
     "node-sass-middleware": "0.9.8",
     "request": "^2.82.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
   }
 }
